2009-12-03  Torbjorn Granlund  <tege@gmplib.org>

	* tune/tuneup.c (tune_binvert): Up max_size.

2009-12-02  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tests/devel/try.c: Test mpn_rsblsh2_n and mpn_rsblsh_n.
        * tests/refmpn.c (refmpn_rsblsh_n, refmpn_rsblsh2_n): New functions.
	(refmpn_rsblsh1_n): Use generic refmpn_rsblsh_n.
        * tests/tests.h: Declare new functions.

2009-12-02  Torbjorn Granlund  <tege@gmplib.org>

	* doc/gmp.texi (Low-level Functions): Document mpn_sqr_n.

	* tune/speed.c (routine): Add mpn_binvert.

	* tune/tuneup.c: Tune BINV_NEWTON_THRESHOLD.
	(tune_binvert): New function.
	* tune/speed.h (SPEED_ROUTINE_MPN_BINVERT): New macros.
	* tune/common.c (speed_mpn_binvert): New function.
	* gmp-impl.h: Provide declarations for corresponding threshold vars.
	* tune/Makefile.am (TUNE_MPN_SRCS_BASIC): Add binvert.c.

	* tune/tuneup.c: Tune DC_BDIV_QR_THRESHOLD and DC_BDIV_Q_THRESHOLD.
	(tune_dc_bdiv): New function.
	(tune_dc_div): New name for tune_dc.
	* tune/speed.h (SPEED_ROUTINE_MPN_PI1_BDIV_QR,
	SPEED_ROUTINE_MPN_PI1_BDIV_Q): New macros.
	* tune/common.c (speed_mpn_sbpi1_bdiv_qr, speed_mpn_dcpi1_bdiv_qr,
	speed_mpn_sbpi1_bdiv_q, speed_mpn_dcpi1_bdiv_q): New functions.
	* gmp-impl.h: Provide declarations for corresponding threshold vars.
	* tune/Makefile.am (TUNE_MPN_SRCS_BASIC): Add dcpi1_bdiv_qr.c and
	dcpi1_bdiv_q.c.

2009-12-01  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/toom53_mul.c: Removed double computation of vinf.

	* mpn/x86_64/aorrlsh_n.asm: Correct return value for rsblsh_n.
	* mpn/asm-defs.m4 (define_mpn): Add rsblsh_n.
	* gmp-impl.h (mpn_rsblsh_n): Added prototype and name-mangling.

	* mpn/generic/fib2_ui.c: Reduce the amount of temporary storage.
	Use mpn_rsblsh_n.

2009-12-01  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/redc_n.c: Rework temp allocation.

	* mpn/generic/dcpi1_bdiv_qr.c (mpn_dcpi1_bdiv_qr_n_itch): Add pi1 also
	to this function.
