@@ -122,7 +122,7 @@ DISTCLEANFILES = sqr_basecase.c  $(MANY_DISTCLEAN)
 # recompiled object will be rebuilt if that file changes.
 
 TUNE_MPN_SRCS = $(TUNE_MPN_SRCS_BASIC) divrem_1.c mod_1.c
-TUNE_MPN_SRCS_BASIC = dcpi1_div_qr.c dcpi1_bdiv_qr.c dcpi1_bdiv_q.c	\
+TUNE_MPN_SRCS_BASIC = dcpi1_div_qr.c dcpi1_divappr_q.c dcpi1_bdiv_qr.c dcpi1_bdiv_q.c	\
   binvert.c divrem_2.c gcd.c gcdext.c get_str.c				\
   set_str.c matrix22_mul.c hgcd.c mul_n.c sqr_n.c			\
   mullow_n.c mul_fft.c mul.c tdiv_qr.c mulmod_bnm1.c			\
